# ai-claims-customer-service

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
knowledge_base/医疗险/: 医疗险理赔流程.md
knowledge_base/意外险/: 意外险理赔流程.md
knowledge_base/财产险/: 财产险理赔流程.md
knowledge_base/车险/: 车险理赔材料清单.md  车险理赔流程.md
scripts/: build_knowledge_base.py
src/agent/: claims_graph.py
src/middleware/: guardrails_middleware.py
src/prompts/: claims_agent_prompt.py
src/tools/: card_tools.py  knowledge_base_tools.py
